--- a/src/components/HomeHeader/style.less
+++ b/src/components/HomeHeader/style.less
@@ -29,6 +29,7 @@
         input {
             font-size: 14px !important;
             font-weight: normal;
+            border: 0;
         }
     }
 }
