--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -15,6 +15,7 @@ body {
 input {
     // border 可应用于几乎所有有形的html元素，而 outline 是针对链接、表单控件和ImageMap等元素设计
     // outline是元素的外轮廓，和border不同的是，outline不占据空间。
+    // 属性默认值就是none不显示
     outline:none;
 }
 
