--- a/src/components/HomeList/style.less
+++ b/src/components/HomeList/style.less
@@ -1,24 +1,4 @@
-#home-ad1 {
+.list-container {
     background-color: #fff;
-
-    h2 {
-        font-size: 16px;
-        font-weight: 700;
-        padding: 10px 15px;
-        border-bottom: 1px solid #f1f1f1;
-    }
-
-    .container1 {
-        width: 100%;
-        padding: 10px 15px;
-    }
-
-    .item1 {
-        width: 33.3%;
-        height: 140px;
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
+    padding: 0 15px;
 }
