search page completed

--- a/src/components/HomeHeader/style.less
+++ b/src/components/HomeHeader/style.less
@@ -33,6 +33,8 @@
             font-size: 14px !important;
             font-weight: normal;
             border: 0;
+            width: 80%;
+            color: #333 !important;
         }
     }
 }
