--- a/src/components/HomeList/Item/style.less
+++ b/src/components/HomeList/Item/style.less
@@ -12,6 +12,9 @@
             height: 100%;
         }
     }
+    a {
+        text-decoration: none;
+    }
 
     .item-content {
         margin-left: 100px;
